Fixed width of todo's description when is too large (with one long word)

--- a/src/App.css
+++ b/src/App.css
@@ -69,6 +69,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  max-width: 70%;
 }
 
 .todo-item p:nth-child(1) {
@@ -82,12 +83,14 @@
   color: #222;
   font-size: 15px;
   font-weight: 300;
+  overflow-wrap: break-word;
+  max-width: 100%;
 }
 
 .todo-item .complete-checkbox {
   margin-right: 5px;
-  width: 30px;
-  height: 30px;
+  min-width: 30px;
+  min-height: 30px;
   cursor: pointer;
 }
 
