--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+* {
+  outline: 1px solid red;
+}
+
 body {
   margin: 0;
   display: flex;
